--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     },
     "homepage": "https://github.com/QGIsK/personal-website#readme",
     "dependencies": {
+        "axios": "^0.19.0",
+        "body-parser": "1.19.0",
         "config": "^3.1.0",
         "cors": "2.8.5",
         "express": "^4.17.1",
@@ -32,7 +34,6 @@
         "morgan": "1.9.1",
         "shortid": "^2.2.14",
         "valid-url": "^1.0.9",
-        "axios": "^0.19.0",
         "vue": "^2.5.2",
         "vue-router": "^3.0.1",
         "vuetify": "^1.5.16",
