--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
         "cors": "2.8.5",
         "express": "^4.17.1",
         "express-brute": "1.0.1",
+        "express-sanitizer": "1.0.5",
+        "express-validator": "6.2.0",
         "helmet": "3.18.0",
         "mongoose": "^5.6.4",
         "morgan": "1.9.1",
+        "nodemailer": "6.3.1",
         "shortid": "^2.2.14",
         "valid-url": "^1.0.9",
         "vue": "^2.5.2",
