--- a/package.json
+++ b/package.json
@@ -1,111 +1,60 @@
 {
-    "name": "personal-website",
-    "version": "1.0.1",
-    "description": "Personal website",
-    "main": "app.js",
-    "scripts": {
-        "start": "node app.js",
-        "dev:server": "npx nodemon app.js",
-        "dev:client": "webpack-dev-server --inline --progress --config client/build/webpack.dev.conf.js",
-        "dev:lint": "eslint --ext .js,.vue src",
-        "dev:build": "node client/build/build.js"
-    },
-    "heroku-run-build-script": false,
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/QGIsK/personal-website.git"
-    },
-    "keywords": [
-        "Personal",
-        "Website",
-        "Nodejs",
-        "Express",
-        "Vue",
-        "MongoDB",
-        "MEVN",
-        "Portfolioc"
-    ],
-    "author": "Demian",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/QGIsK/personal-website/issues"
-    },
-    "homepage": "https://github.com/QGIsK/personal-website#readme",
-    "dependencies": {
-        "axios": "^0.19.0",
-        "body-parser": "1.19.0",
-        "config": "^3.1.0",
-        "cors": "2.8.5",
-        "dotenv": "8.2.0",
-        "express": "^4.17.1",
-        "express-brute": "1.0.1",
-        "express-sanitizer": "1.0.5",
-        "express-validator": "6.2.0",
-        "helmet": "3.21.2",
-        "mongoose": "^5.6.4",
-        "morgan": "1.9.1",
-        "nodemailer": "6.3.1",
-        "shortid": "^2.2.14",
-        "valid-url": "^1.0.9",
-        "vue": "^2.5.2",
-        "vue-router": "^3.0.1",
-        "vuetify": "^2.1.0",
-        "vuex": "^3.1.1"
-    },
-    "devDependencies": {
-        "autoprefixer": "^9.7.1",
-        "babel-core": "^6.22.1",
-        "babel-eslint": "^8.2.1",
-        "babel-helper-vue-jsx-merge-props": "^2.0.3",
-        "babel-loader": "^7.1.1",
-        "babel-plugin-syntax-jsx": "^6.18.0",
-        "babel-plugin-transform-runtime": "^6.22.0",
-        "babel-plugin-transform-vue-jsx": "^3.5.0",
-        "babel-preset-env": "^1.3.2",
-        "babel-preset-stage-2": "^6.22.0",
-        "chalk": "^2.0.1",
-        "copy-webpack-plugin": "^4.0.1",
-        "css-loader": "^0.28.0",
-        "eslint": "5.16.0",
-        "eslint-config-airbnb": "17.1.1",
-        "eslint-config-google": "0.14.0",
-        "eslint-config-prettier": "6.0.0",
-        "eslint-friendly-formatter": "^3.0.0",
-        "eslint-loader": "^2.2.1",
-        "eslint-plugin-prettier": "3.1.1",
-        "eslint-plugin-vue": "^4.0.0",
-        "extract-text-webpack-plugin": "^3.0.0",
-        "file-loader": "^1.1.4",
-        "friendly-errors-webpack-plugin": "^1.6.1",
-        "html-webpack-plugin": "^2.30.1",
-        "node-notifier": "^5.1.2",
-        "optimize-css-assets-webpack-plugin": "^4.0.0",
-        "ora": "^1.2.0",
-        "portfinder": "^1.0.13",
-        "postcss-import": "^11.0.0",
-        "postcss-loader": "^2.0.8",
-        "postcss-url": "^7.2.1",
-        "prettier": "1.18.2",
-        "rimraf": "^2.6.0",
-        "semver": "^5.3.0",
-        "shelljs": "^0.8.3",
-        "uglifyjs-webpack-plugin": "^1.1.1",
-        "url-loader": "^1.1.2",
-        "vue-loader": "^13.3.0",
-        "vue-style-loader": "^3.0.1",
-        "vue-template-compiler": "^2.5.2",
-        "webpack": "^3.6.0",
-        "webpack-bundle-analyzer": "^3.6.0",
-        "webpack-dev-server": "^2.9.1",
-        "webpack-merge": "^4.1.0"
-    },
-    "engines": {
-        "node": ">= 6.0.0",
-        "npm": ">= 3.0.0"
-    },
-    "browserslist": [
-        "> 1%",
-        "last 2 versions",
-        "not ie <= 8"
-    ]
+  "name": "personal-website",
+  "version": "1.0.1",
+  "description": "Personal website",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js",
+    "dev:server": "npx nodemon app.js",
+    "dev:client": "webpack-dev-server --inline --progress --config client/build/webpack.dev.conf.js",
+    "dev:lint": "eslint --ext .js,.vue src",
+    "dev:build": "node client/build/build.js"
+  },
+  "heroku-run-build-script": false,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/QGIsK/personal-website.git"
+  },
+  "keywords": [
+    "Personal",
+    "Website",
+    "Nodejs",
+    "Express",
+    "Vue",
+    "MongoDB",
+    "MEVN",
+    "Portfolioc"
+  ],
+  "author": "Demian",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/QGIsK/personal-website/issues"
+  },
+  "homepage": "https://github.com/QGIsK/personal-website#readme",
+  "dependencies": {
+    "axios": "^0.19.0",
+    "body-parser": "1.19.0",
+    "config": "^3.1.0",
+    "cors": "2.8.5",
+    "dotenv": "8.2.0",
+    "express": "^4.17.1",
+    "express-brute": "1.0.1",
+    "express-sanitizer": "1.0.5",
+    "express-validator": "6.2.0",
+    "helmet": "3.21.2",
+    "mongoose": "^5.6.4",
+    "morgan": "1.9.1",
+    "nodemailer": "6.3.1",
+    "shortid": "^2.2.14",
+    "valid-url": "^1.0.9"
+  },
+  "engines": {
+    "node": ">= 6.0.0",
+    "npm": ">= 3.0.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
