--- a/package.json
+++ b/package.json
@@ -29,11 +29,15 @@
     "express": "^4.17.1",
     "express-brute": "^1.0.1",
     "express-rate-limit": "5.0.0",
+    "express-sanitizer": "^1.0.5",
     "helmet": "^3.18.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.5",
     "mongoose-timestamp": "0.6.0",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.4.2",
+    "shortid": "^2.2.15",
+    "valid-url": "^1.0.9",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuetify": "^1.5.16",
