--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@mdi/font": "^3.6.95",
     "axios": "0.19.0",
     "core-js": "^3.4.3",
+    "particles-bg-vue": "^1.2.3",
     "roboto-fontface": "*",
     "vue": "^2.6.10",
     "vue-cookies": "1.6.1",
