--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongoose-timestamp": "0.6.0",
     "morgan": "^1.9.1",
     "nodemailer": "^6.4.2",
+    "particles-bg-vue": "^1.2.3",
     "shortid": "^2.2.15",
     "valid-url": "^1.0.9",
     "vue": "^2.5.2",
