--- a/.env-example
+++ b/.env-example
@@ -3,4 +3,10 @@ JWT_SECRET=secret
 MONGO_URI=mongodb://localhost:27017/project-setup
 MONGO_DEBUG=true
 
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_USER=
+EMAIL_PASS=
+MAIL_FROM=
+
 port=3000
