--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "roboto-fontface": "*",
     "vue": "^2.6.10",
     "vue-cookies": "1.6.1",
+    "vue-meta": "^2.3.1",
     "vue-router": "^3.1.3",
     "vue-scrollto": "^2.17.1",
     "vuetify": "^2.1.0",
