--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.1",
     "express-brute": "^1.0.1",
     "express-rate-limit": "5.0.0",
+    "express-robots-txt": "^0.4.1",
     "express-sanitizer": "^1.0.5",
     "helmet": "^3.18.0",
     "jsonwebtoken": "^8.5.1",
