--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "heroku-run-build-script": false,
   "dependencies": {
     "@mdi/font": "^3.6.95",
     "axios": "0.19.0",
