--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-rate-limit": "5.0.0",
     "express-robots-txt": "^0.4.1",
     "express-sanitizer": "^1.0.5",
+    "express-subdomain": "^1.0.5",
     "helmet": "^3.18.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.3",
