--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "npx nodemon app.js"
+    "dev": "npx nodemon app.js",
+    "seed:auth": "node ./database/seeds/auth.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/QGIsK/personal-website#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -41,9 +43,8 @@
   },
   "_moduleAliases": {
     "@database": "database/",
-    "@helpers": "routes/helpers",
-    "@routes": "routes/",
-    "something": "src/foo"
+    "@helpers": "helpers/",
+    "@routes": "routes/"
   },
   "browserslist": [
     "> 1%",
