Add admin seeder

--- a/.env-example
+++ b/.env-example
@@ -8,4 +8,8 @@ EMAIL_PORT=465
 
 JWT_SECRET=jdawwa
 
+ADMIN_NAME=Demian
+ADMIN_EMAIL=Demian@example.com
+ADMIN_PASSWORD=123123
+
 NODE_ENV=development
