--- a/package.json
+++ b/package.json
@@ -9,22 +9,23 @@
   },
   "dependencies": {
     "@mdi/font": "^3.6.95",
-    "axios": "0.19.0",
+    "axios": "^0.21.1",
     "core-js": "^3.4.3",
+    "html-loader": "1.0.0",
+    "markdown-loader": "5.0.0",
     "particles-bg-vue": "^1.2.3",
-    "vue": "^2.6.10",
-    "vue-cookies": "1.6.1",
-    "vue-router": "^3.1.3",
-    "vue-scrollto": "^2.17.1",
-    "vuetify": "^2.1.0",
-    "vuex": "^3.1.2"
+    "vue": "^2.6.11",
+    "vue-router": "^3.2.0",
+    "vue-scrollto": "^2.20.0",
+    "vuetify": "^2.4.0",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-plugin-router": "4.1.1",
-    "@vue/cli-plugin-vuex": "4.1.1",
-    "@vue/cli-service": "^4.1.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
