--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.1.0",
     "express-rate-limit": "5.0.0",
     "express-robots-txt": "^0.4.1",
     "express-sanitizer": "^1.0.5",
@@ -35,7 +36,8 @@
     "morgan": "^1.9.1",
     "nodemailer": "^6.4.2",
     "shortid": "^2.2.15",
-    "valid-url": "^1.0.9"
+    "valid-url": "^1.0.9",
+    "xss-clean": "^0.1.1"
   },
   "engines": {
     "node": ">= 8.0.0",
