--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "Personal website build with nodejs express vue and mongodb",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "npx nodemon app.js",
+    "start:server": "node app.js",
+    "dev:server": "npx nodemon app.js",
+    "dev:client": "vue-cli-service serve ./client/src/main.js",
+    "build:client": "vue-cli-service build ./client/src/main.js --dest _static",
+    "lint:client": "vue-cli-service lint ./client/src/main.js",
     "seed:auth": "node ./database/seeds/auth.js"
   },
   "repository": {
@@ -19,7 +22,10 @@
   },
   "homepage": "https://github.com/QGIsK/personal-website#readme",
   "dependencies": {
+    "@mdi/font": "^3.6.95",
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
+    "core-js": "^3.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -29,14 +35,22 @@
     "express-sanitizer": "^1.0.5",
     "express-subdomain": "^1.0.5",
     "helmet": "^3.18.0",
+    "html-loader": "1.0.0",
     "jsonwebtoken": "^8.5.1",
+    "markdown-loader": "5.0.0",
     "module-alias": "^2.2.2",
     "mongoose": "^5.8.3",
     "mongoose-timestamp": "0.6.0",
     "morgan": "^1.9.1",
     "nodemailer": "^6.4.2",
+    "particles-bg-vue": "^1.2.3",
     "shortid": "^2.2.15",
     "valid-url": "^1.0.9",
+    "vue": "^2.6.11",
+    "vue-router": "^3.2.0",
+    "vue-scrollto": "^2.20.0",
+    "vuetify": "^2.4.0",
+    "vuex": "^3.4.0",
     "xss-clean": "^0.1.1"
   },
   "engines": {
@@ -47,11 +61,28 @@
     "@database": "database/",
     "@helpers": "helpers/",
     "@routes": "routes/",
-    "@middleware": "middleware/"
+    "@middleware": "middleware/",
+    "@components": "client/src/components/"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "^4.1.0",
+    "@vue/cli-plugin-eslint": "^4.1.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.12.0",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuetify": "2.0.2",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.3.0"
+  }
 }
