--- a/package.json
+++ b/package.json
@@ -23,11 +23,19 @@
   "homepage": "https://github.com/QGIsK/portfolio#readme",
   "dependencies": {
     "@mdi/font": "^3.6.95",
+    "@vue/cli-plugin-babel": "^4.1.0",
+    "@vue/cli-plugin-eslint": "^4.1.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
     "axios": "^0.21.1",
+    "babel-eslint": "^10.0.3",
     "bcryptjs": "^2.4.3",
     "core-js": "^3.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.0.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.1.0",
     "express-rate-limit": "5.0.0",
@@ -43,30 +51,22 @@
     "mongoose": "^5.8.3",
     "mongoose-timestamp": "0.6.0",
     "morgan": "^1.9.1",
+    "node-sass": "^4.12.0",
     "nodemailer": "^6.4.16",
     "particles-bg-vue": "^1.2.3",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
     "shortid": "^2.2.15",
     "valid-url": "^1.0.9",
     "vue": "^2.6.11",
+    "vue-cli-plugin-vuetify": "2.0.2",
     "vue-router": "^3.2.0",
     "vue-scrollto": "^2.20.0",
-    "vuetify": "^2.4.0",
-    "vuex": "^3.4.0",
-    "xss-clean": "^0.1.1",
-    "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.12.0",
-    "sass": "^1.19.0",
-    "sass-loader": "^8.0.0",
-    "vue-cli-plugin-vuetify": "2.0.2",
     "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.3.0"
+    "vuetify": "^2.4.0",
+    "vuetify-loader": "^1.3.0",
+    "vuex": "^3.4.0",
+    "xss-clean": "^0.1.1"
   },
   "engines": {
     "node": ">= 8.0.0",
