--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "Personal website build with nodejs express vue and mongodb",
   "main": "app.js",
   "scripts": {
-    "start:server": "node app.js",
+    "start": "node app.js",
     "dev:server": "cross-env NODE_ENV=development nodemon app.js",
     "dev:client": "vue-cli-service serve ./client/src/main.js",
     "build:client": "vue-cli-service build ./client/src/main.js --dest _static",
-    "lint:client": "vue-cli-service lint ./client/src/main.js",
     "seed:auth": "node ./database/seeds/auth.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -27,22 +26,12 @@
   "homepage": "https://github.com/QGIsK/personal-website#readme",
   "dependencies": {
     "@mdi/font": "^3.6.95",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "core-js": "^3.4.3",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
-    "eslint": "^7.0.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-vue": "^5.0.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.1.0",
     "express-rate-limit": "5.0.0",
@@ -59,26 +48,41 @@
     "mongoose": "^5.8.3",
     "mongoose-timestamp": "0.6.0",
     "morgan": "^1.9.1",
-    "node-sass": "^4.12.0",
     "nodemailer": "^6.4.16",
     "particles-bg-vue": "^1.2.3",
     "prettier": "^2.0.5",
-    "sass": "^1.19.0",
-    "sass-loader": "^8.0.0",
     "shortid": "^2.2.15",
     "valid-url": "^1.0.9",
     "vue": "^2.6.11",
-    "vue-cli-plugin-vuetify": "2.0.2",
     "vue-router": "^3.2.0",
     "vue-scrollto": "^2.20.0",
-    "vue-template-compiler": "^2.6.10",
     "vuetify": "^2.4.0",
-    "vuetify-loader": "^1.3.0",
     "vuex": "^3.4.0",
     "xss-clean": "^0.1.1"
   },
+  "devDependencies": {
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "eslint": "^7.0.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jest": "^24.0.1",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-security": "^1.4.0",
+    "node-sass": "^4.12.0",
+    "nodemon": "^2.0.0",
+    "prettier": "^2.0.5",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuetify": "2.0.2",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.3.0"
+  },
   "engines": {
-    "node": ">= 8.0.0",
+    "node": ">= 12.0.0",
     "npm": ">= 6.0.0"
   },
   "_moduleAliases": {
