--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,3 +16,19 @@ jobs:
               npm run build
               npm run lint:fix
               npm run prettier:fix
+      - uses: EndBug/add-and-commit@v7 # You can change this to use a specific version
+        with:
+          add: '_static'
+
+          author_name: Demian
+
+          author_email: devaccdemiann@gmail.com
+
+          branch: master
+
+          default_author: github_actor
+
+          message: 'Rebuild Client side'
+
+          signoff: true
+
