--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Run Unit Tests and Lint Files
+name: Build project
 
 # Controls when the workflow will run
 on:
@@ -7,28 +7,28 @@ on:
     branches: [ master ]
 
 jobs:
-  unit_test-lint:
+  run:
+    name: Build Project
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - run: |
-              npm ci
-              npm run build
-              npm run lint:fix
-              npm run prettier:fix
-      - uses: EndBug/add-and-commit@v7 # You can change this to use a specific version
+      - name: Checkout repo
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v1
         with:
-          add: '_static'
+          node-version: 12.x
 
+      - name: Install dependencies
+        run: npm install
+        
+      - name: Build Project
+        run: npm run build
+
+      - name: Commit changes
+        uses: EndBug/add-and-commit@v7
+        with:
           author_name: Demian
-
           author_email: devaccdemiann@gmail.com
-
-          branch: master
-
-          default_author: github_actor
-
-          message: 'Rebuild Client side'
-
-          signoff: true
-
+          message: 'Rebuild Client Side'
+          add: '_static'
