--- a/.github/workflows/prettify.yml
+++ b/.github/workflows/prettify.yml
@@ -18,15 +18,7 @@ jobs:
         run: npm install
 
       - name: Run Prettier
-        run: npm run prettier:fix
+        run: npm run prettier
 
       - name: Run eslint
-        run: npm run lint:fix
-
-      - name: Commit changes
-        uses: EndBug/add-and-commit@v7
-        with:
-          author_name: Demian
-          author_email: devaccdemiann@gmail.com
-          message: 'Run: eslint and prettier'
-          add: '.'
+        run: npm run lint
