--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,8 @@
 name: Build project
 
 # Controls when the workflow will run
-on:
+on: 
+  workflow_dispatch: 
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: 
