Add alias for validations

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,10 @@
             "./middleware"
           ],
           [
+            "@validations",
+            "./validations"
+          ],
+          [
             "@components",
             "./client/src/components"
           ]
