--- a/package.json
+++ b/package.json
@@ -64,54 +64,49 @@
   "dependencies": {
     "@mdi/font": "^3.6.95",
     "axios": "^0.21.1",
-    "express-robots-txt": "^0.4.1",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
-    "html-loader": "1.0.0",
-    "markdown-loader": "5.0.0",
-    "marked": "^0.7.0",
-    "particles-bg-vue": "^1.2.3",
-    "shortid": "^2.2.15",
-    "valid-url": "^1.0.9",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vue-scrollto": "^2.20.0",
-    "vuetify": "^2.4.0",
-    "vuex": "^3.4.0",
-    "cors": "^2.8.5",
     "core-js": "^3.4.3",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.0",
     "express-rate-limit": "^5.0.0",
+    "express-robots-txt": "^0.4.1",
     "helmet": "^4.1.0",
+    "html-loader": "1.0.0",
     "http-status": "^1.4.0",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
+    "markdown-loader": "5.0.0",
+    "marked": "^0.7.0",
     "module-alias": "^2.2.2",
     "moment": "^2.24.0",
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
     "nodemailer": "^6.3.1",
+    "particles-bg-vue": "^1.2.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "pm2": "^5.1.0",
+    "shortid": "^2.2.15",
+    "valid-url": "^1.0.9",
     "validator": "^13.0.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.2.0",
+    "vue-scrollto": "^2.20.0",
+    "vuetify": "^2.4.0",
+    "vuex": "^3.4.0",
     "winston": "^3.2.1",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
-    "coveralls": "^3.0.7",
-    "eslint": "^7.0.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "sass": "^1.19.0",
-    "sass-loader": "^8.0.0",
-    "vue-cli-plugin-vuetify": "2.0.2",
-    "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.3.0",
+    "coveralls": "^3.0.7",
+    "eslint": "^7.0.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -125,7 +120,12 @@
     "node-mocks-http": "^1.8.0",
     "nodemon": "^2.0.0",
     "prettier": "^2.0.5",
-    "supertest": "^6.0.1"
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "supertest": "^6.0.1",
+    "vue-cli-plugin-vuetify": "2.0.2",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.3.0"
   },
   "browserslist": [
     "> 1%",
