Set base url properly

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ PORT=3000
 MONGODB_URL=mongodb://127.0.0.1:27017/portfolio
 
 # Base url for frontend
-BASE_URL=http://localhost:3000
+VUE_APP_API_PATH=http://localhost:3000/api
 
 # JWT
 # JWT secret key
