--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ MONGODB_URL=mongodb://127.0.0.1:27017/portfolio
 
 # Base url for frontend
 VUE_APP_API_PATH=http://localhost:3000/api
+BASE_URL=http://localhost:3000
+
 
 # JWT
 # JWT secret key
