--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,7 @@ JWT_VERIFY_EMAIL_EXPIRATION_MINUTES=10
 # For testing, you can use a fake SMTP service like Ethereal: https://ethereal.email/create
 SMTP_HOST=email-server
 SMTP_PORT=587
+SMTP_TO=you@gmail.com
 SMTP_USERNAME=email-server-username
 SMTP_PASSWORD=email-server-password
 EMAIL_FROM=support@yourapp.com
