--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "node": ">=12.0.0"
   },
   "scripts": {
-    "start": "pm2 start ecosystem.config.json --no-daemon",
+    "start": "node src/index.js",
     "dev": "cross-env NODE_ENV=development nodemon src/index.js",
     "dev:client": "vue-cli-service serve ./client/src/main.js",
     "build": "vue-cli-service build ./client/src/main.js --dest _dist",
