--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,4 @@ SMTP_TO=you@gmail.com
 SMTP_USERNAME=email-server-username
 SMTP_PASSWORD=email-server-password
 EMAIL_FROM=support@yourapp.com
+EMAIL_TO=support@yourapp.com
