Add vue and scss loaders

--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -13,6 +13,12 @@
     "Contracts": "contracts"
   },
   "preloads": ["./start/routes", "./start/kernel"],
-  "providers": ["./providers/AppProvider", "@adonisjs/core"],
-  "aceProviders": ["@adonisjs/repl"]
+  "providers": ["./providers/AppProvider", "@adonisjs/core", "@adonisjs/view"],
+  "aceProviders": ["@adonisjs/repl"],
+  "metaFiles": [
+    {
+      "pattern": "resources/views/**/*.edge",
+      "reloadServer": false
+    }
+  ]
 }
