--- a/package.json
+++ b/package.json
@@ -22,18 +22,21 @@
     "sass": "^1.42.1",
     "sass-loader": "^12.1.0",
     "typescript": "~4.2",
-    "vue-template-compiler": "^2.6.14",
     "youch": "^2.2.2",
     "youch-terminal": "^1.1.1"
   },
   "dependencies": {
     "@adonisjs/core": "^5.3.4",
     "@adonisjs/repl": "^3.1.6",
+    "@adonisjs/view": "^6.1.1",
     "@vue/compiler-sfc": "^3.2.20",
+    "axios": "^0.22.0",
+    "bootstrap": "^5.1.2",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.20",
-    "vue": "^2.6.14",
-    "vue-loader": "^15.9.8"
+    "vue": "^3.2.20",
+    "vue-loader": "^16.8.1",
+    "vue-router": "^4.0.11"
   }
 }
