--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "./node_modules/adonis-preset-ts/tsconfig",
   "include": ["**/*"],
-  "exclude": ["node_modules", "build"],
+  "exclude": ["node_modules", "build", "resources/js", "resources/js-old"],
   "compilerOptions": {
     "outDir": "build",
     "rootDir": "./",
@@ -12,6 +12,6 @@
       "Contracts/*": ["./contracts/*"],
       "Database/*": ["./database/*"]
     },
-    "types": ["@adonisjs/core", "@adonisjs/repl"]
+    "types": ["@adonisjs/core", "@adonisjs/repl", "@adonisjs/view"]
   }
 }
