Add auth and api tokens

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,13 @@ NODE_ENV=development
 APP_KEY=soz9Q8dUXmDZwUnnett8JTqcSJ60_RzY
 DRIVE_DISK=local
 CACHE_VIEWS=false
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_USER=lucid
+MYSQL_PASSWORD=
+MYSQL_DB_NAME=lucid
+PG_HOST=localhost
+PG_PORT=5432
+PG_USER=lucid
+PG_PASSWORD=
+PG_DB_NAME=lucid
