--- a/package.json
+++ b/package.json
@@ -26,12 +26,18 @@
     "youch-terminal": "^1.1.1"
   },
   "dependencies": {
+    "@adonisjs/auth": "^8.0.9",
     "@adonisjs/core": "^5.3.4",
+    "@adonisjs/lucid": "^16.2.1",
     "@adonisjs/repl": "^3.1.6",
     "@adonisjs/view": "^6.1.1",
     "@vue/compiler-sfc": "^3.2.20",
     "axios": "^0.22.0",
     "bootstrap": "^5.1.2",
+    "luxon": "^2.0.2",
+    "mysql": "^2.18.1",
+    "pg": "^8.7.1",
+    "phc-argon2": "^1.1.2",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.20",
