--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
   "dependencies": {
     "@adonisjs/auth": "^8.0.9",
     "@adonisjs/core": "^5.3.4",
+    "@adonisjs/drive-s3": "^1.0.4",
     "@adonisjs/lucid": "^16.2.1",
     "@adonisjs/repl": "^3.1.6",
+    "@adonisjs/shield": "^7.0.6",
     "@adonisjs/view": "^6.1.1",
     "@vue/compiler-sfc": "^3.2.20",
     "axios": "^0.22.0",
