--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bootstrap": "^5.1.2",
     "luxon": "^2.0.2",
     "mysql": "^2.18.1",
+    "particles.vue3": "^1.18.4",
     "pg": "^8.7.1",
     "phc-argon2": "^1.1.2",
     "proxy-addr": "^2.0.7",
