--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "pino-pretty": "^7.0.1",
     "prettier": "^2.4.1",
     "sass": "^1.42.1",
-    "sass-loader": "^12.1.0",
+    "sass-loader": "~10",
     "typescript": "~4.2",
+    "vue-template-compiler": "~2.6.10",
+    "vuetify-loader": "^1.3.0",
     "youch": "^2.2.2",
     "youch-terminal": "^1.1.1"
   },
@@ -33,19 +35,25 @@
     "@adonisjs/repl": "^3.1.6",
     "@adonisjs/shield": "^7.0.6",
     "@adonisjs/view": "^6.1.1",
+    "@mdi/font": "~3.6.95",
     "@vue/compiler-sfc": "^3.2.20",
     "axios": "^0.22.0",
-    "bootstrap": "^5.1.2",
+    "html-loader": "1.0.0",
     "luxon": "^2.0.2",
+    "markdown-loader": "5.0.0",
+    "marked": "^0.7.0",
+    "moment": "^2.24.1",
     "mysql": "^2.18.1",
-    "particles.vue3": "^1.18.4",
+    "particles-bg-vue": "^1.3.3",
     "pg": "^8.7.1",
     "phc-argon2": "^1.1.2",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.20",
-    "vue": "^3.2.20",
-    "vue-loader": "^16.8.1",
-    "vue-router": "^4.0.11"
+    "vue": "^2.6.14",
+    "vue-loader": "^15.9.8",
+    "vue-router": "^3.2.0",
+    "vue-scrollto": "^2.20.0",
+    "vuetify": "^2.4.0",
+    "vuex": "^3.4.0"
   }
 }
