--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "./node_modules/adonis-preset-ts/tsconfig",
   "include": ["**/*"],
-  "exclude": ["node_modules", "build", "resources/js", "resources/js-old"],
+  "exclude": ["node_modules", "build", "resources/js-old"],
   "compilerOptions": {
     "outDir": "build",
     "rootDir": "./",
