Add: Mail, Contact method, Markdown loaders & Refactored

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,9 @@ S3_SECRET=dummySecret
 S3_BUCKET=dummyBucket
 S3_REGION=dummyRegion
 S3_ENDPOINT=dummyEndpoint
+SMTP_HOST=localhost
+SMTP_PORT=587
+SMTP_USERNAME=<username>
+SMTP_PASSWORD=<password>
+MAIL_FROM=no-reply@demiann.dev
+MAIL_TO=test@demiann.dev
