--- a/package.json
+++ b/package.json
@@ -32,15 +32,16 @@
     "@adonisjs/core": "^5.3.4",
     "@adonisjs/drive-s3": "^1.0.4",
     "@adonisjs/lucid": "^16.2.1",
+    "@adonisjs/mail": "^7.2.4",
     "@adonisjs/repl": "^3.1.6",
     "@adonisjs/shield": "^7.0.6",
     "@adonisjs/view": "^6.1.1",
     "@mdi/font": "~3.6.95",
     "@vue/compiler-sfc": "^3.2.20",
     "axios": "^0.22.0",
-    "html-loader": "1.0.0",
+    "html-loader": "^1.0.0",
     "luxon": "^2.0.2",
-    "markdown-loader": "5.0.0",
+    "markdown-loader": "^5.0.0",
     "marked": "^0.7.0",
     "moment": "^2.24.1",
     "mysql": "^2.18.1",
