--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 16.x
-        
+
       - name: Install dependencies
         run: cd client && npm install
 
@@ -32,7 +32,7 @@ jobs:
       - name: Commit changes
         uses: EndBug/add-and-commit@v7
         with:
-          author_name: Demian
-          author_email: devaccdemiann@gmail.com
+          author_name: Github Actions
+          author_email: no-reply@demiann.dev
           message: 'Rebuild Client'
           add: 'client/dist'
