--- a/.github/workflows/buildAdonis.yml
+++ b/.github/workflows/buildAdonis.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm install
 
       - name: Build Project
-        run: npm run build
+        run: npm run build --ignore-ts-errors
 
       - name: Upload to cdn
         run: node ace publish:assets
