add: tailwind, started with dashboard

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,4 @@ SMTP_USERNAME=<username>
 SMTP_PASSWORD=<password>
 MAIL_FROM=no-reply@demiann.dev
 MAIL_TO=test@demiann.dev
+SESSION_DRIVER=cookie
