--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -14,7 +14,10 @@
     "Database": "database",
     "Contracts": "contracts"
   },
-  "preloads": ["./start/routes", "./start/kernel"],
+  "preloads": [
+    "./start/routes",
+    "./start/kernel"
+  ],
   "providers": [
     "./providers/AppProvider",
     "@adonisjs/core",
@@ -23,9 +26,12 @@
     "@adonisjs/auth",
     "@adonisjs/drive-s3",
     "@adonisjs/shield",
-    "@adonisjs/mail"
+    "@adonisjs/mail",
+    "@adonisjs/session"
   ],
-  "aceProviders": ["@adonisjs/repl"],
+  "aceProviders": [
+    "@adonisjs/repl"
+  ],
   "metaFiles": [
     {
       "pattern": "resources/views/**/*.edge",
