--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "@adonisjs/assembler": "^5.3.7",
     "@symfony/webpack-encore": "^1.6.1",
     "adonis-preset-ts": "^2.1.0",
+    "autoprefixer": "^10.3.7",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-adonis": "^1.3.3",
     "eslint-plugin-prettier": "^4.0.0",
     "pino-pretty": "^7.0.1",
+    "postcss": "^8.3.9",
+    "postcss-loader": "^6.2.0",
     "prettier": "^2.4.1",
     "sass": "^1.42.1",
     "sass-loader": "~10",
+    "tailwindcss": "^2.2.17",
     "typescript": "~4.2",
     "vue-template-compiler": "~2.6.10",
     "vuetify-loader": "^1.3.0",
@@ -37,6 +41,7 @@
     "@adonisjs/lucid": "^16.2.1",
     "@adonisjs/mail": "^7.2.4",
     "@adonisjs/repl": "^3.1.6",
+    "@adonisjs/session": "^6.1.2",
     "@adonisjs/shield": "^7.0.6",
     "@adonisjs/view": "^6.1.1",
     "@mdi/font": "~3.6.95",
