--- a/.env.example
+++ b/.env.example
@@ -2,27 +2,38 @@ PORT=3333
 HOST=0.0.0.0
 NODE_ENV=development
 APP_KEY=soz9Q8dUXmDZwUnnett8JTqcSJ60_RzY
+
 DRIVE_DISK=local
 CACHE_VIEWS=false
+SESSION_DRIVER=cookie
+DB_CONNECTION=mysql
+DB_SSL=false
+
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
 MYSQL_USER=lucid
 MYSQL_PASSWORD=
 MYSQL_DB_NAME=lucid
+
 PG_HOST=localhost
 PG_PORT=5432
 PG_USER=lucid
 PG_PASSWORD=
 PG_DB_NAME=lucid
+
 S3_KEY=dummyKey
 S3_SECRET=dummySecret
 S3_BUCKET=dummyBucket
 S3_REGION=dummyRegion
 S3_ENDPOINT=dummyEndpoint
+
 SMTP_HOST=localhost
 SMTP_PORT=587
 SMTP_USERNAME=<username>
 SMTP_PASSWORD=<password>
+
 MAIL_FROM=no-reply@demiann.dev
 MAIL_TO=test@demiann.dev
-SESSION_DRIVER=cookie
+
+ADMIN_EMAIL=admin@demiann.dev
+ADMIN_PASSWORD=testing123123
