--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,9 @@ DB_SSL=false
 
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
-MYSQL_USER=lucid
-MYSQL_PASSWORD=
-MYSQL_DB_NAME=lucid
+MYSQL_USER=root
+MYSQL_PASSWORD=admin
+MYSQL_DB_NAME=portfolio
 
 PG_HOST=localhost
 PG_PORT=5432
