--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": ">16.0.0"
+    "node": ">=16.0.0 <17"
   },
   "scripts": {
     "dev": "node ace serve --watch",
