add: silent auth and guest middleware

--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -14,7 +14,10 @@
     "Database": "database",
     "Contracts": "contracts"
   },
-  "preloads": ["./start/routes", "./start/kernel"],
+  "preloads": [
+    "./start/routes",
+    "./start/kernel"
+  ],
   "providers": [
     "./providers/AppProvider",
     "@adonisjs/core",
@@ -26,7 +29,9 @@
     "@adonisjs/mail",
     "@adonisjs/session"
   ],
-  "aceProviders": ["@adonisjs/repl"],
+  "aceProviders": [
+    "@adonisjs/repl"
+  ],
   "metaFiles": [
     {
       "pattern": "resources/views/**/*.edge",
