--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "@adonisjs/session": "^6.1.2",
     "@adonisjs/shield": "^7.0.6",
     "@adonisjs/view": "^6.1.1",
+    "@hotwired/turbo": "^7.0.1",
     "@mdi/font": "~3.6.95",
     "@vue/compiler-sfc": "^3.2.20",
+    "alpinejs": "^3.4.2",
     "axios": "^0.22.0",
     "html-loader": "^1.0.0",
     "luxon": "^2.0.2",
