--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -14,10 +14,7 @@
     "Database": "database",
     "Contracts": "contracts"
   },
-  "preloads": [
-    "./start/routes",
-    "./start/kernel"
-  ],
+  "preloads": ["./start/routes", "./start/kernel"],
   "providers": [
     "./providers/AppProvider",
     "@adonisjs/core",
@@ -29,13 +26,5 @@
     "@adonisjs/mail",
     "@adonisjs/session"
   ],
-  "aceProviders": [
-    "@adonisjs/repl"
-  ],
-  "metaFiles": [
-    {
-      "pattern": "resources/views/**/*.edge",
-      "reloadServer": false
-    }
-  ]
+  "aceProviders": ["@adonisjs/repl"]
 }
