--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,4 @@
 {
-  "extends": "./node_modules/adonis-preset-ts/tsconfig",
-  "include": ["**/*"],
-  "exclude": ["node_modules", "build", "resources/js-old"],
-  "compilerOptions": {
-    "outDir": "build",
-    "rootDir": "./",
-    "sourceMap": true,
-    "paths": {
-      "App/*": ["./app/*"],
-      "Config/*": ["./config/*"],
-      "Contracts/*": ["./contracts/*"],
-      "Database/*": ["./database/*"]
-    },
-    "types": [
-      "@adonisjs/core",
-      "@adonisjs/repl",
-      "@adonisjs/view",
-      "@adonisjs/lucid",
-      "@adonisjs/auth",
-      "@adonisjs/drive-s3",
-      "@adonisjs/shield",
-      "@adonisjs/mail",
-      "@adonisjs/session"
-    ]
-  }
+  // https://v3.nuxtjs.org/concepts/typescript
+  "extends": "./.nuxt/tsconfig.json"
 }
