--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
+    "sass": "^1.43.4",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
