--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
+    "particles-bg-vue": "^1.3.5",
     "sass": "^1.43.4",
+    "vue-scrollto": "^2.20.0",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
