--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": ">=16.12.0"
+    "node": ">=16.12.0",
+    "npm": ">=8.1.0"
   },
   "scripts": {
     "dev": "nuxt",
