--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "core-js": "^3.15.1",
         "nuxt": "^2.15.7",
         "particles-bg-vue": "^1.3.5",
+        "reading-time": "^1.5.0",
         "sass": "^1.43.4",
         "vue-scrollto": "^2.20.0",
         "vuetify": "2.6"
