--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
         "generate": "nuxt generate",
         "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
         "prepare": "husky install",
-        "lint": "npm run lint:js"
+        "lint": "npm run lint:js",
+        "deploy:dev": "wrangler publish -e development",
+        "deploy:prod": "wrangler publish -e production"
     },
     "prettier": "@qgisk/prettier-config",
     "lint-staged": {
