--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,23 @@
 name = "portfolio"
 type = "webpack"
-route = ''
 account_id = "1bda26fe457ea7a9dcd193e268e07770"
 zone_id = ''
-usage_model = ''
 compatibility_flags = []
-workers_dev = true
-site = {bucket = "dist",entry-point = "workers-site"}
 compatibility_date = "2022-01-07"
+
+
+
+[site]
+bucket = "./dist"
+
+[env.production]
+name="portfolio"
+route = ''
+workers_dev = false
+ENVIRONMENT = 'production'
+
+[env.development]
+name = "portfolio-dev"
+route = ''
+workers_dev = true
+ENVIRONMENT = 'development'
