--- a/package.json
+++ b/package.json
@@ -1,65 +1,39 @@
 {
   "private": true,
+  "sideEffects": false,
   "scripts": {
-    "build": "vite build",
-    "dev": "vite --port 3000 --open",
-    "lint": "eslint \"**/*.{vue,ts,js}\"",
-    "lint:fix": "eslint \"**/*.{vue,ts,js}\" --fix",
-    "test": "vitest",
-    "test:unit": "vitest",
-    "typecheck": "vue-tsc --noEmit"
+    "deploy": "wrangler publish",
+    "dev:miniflare": "cross-env NODE_ENV=development miniflare ./build/index.js --watch",
+    "dev": "remix build && run-p \"dev:*\"",
+    "start": "cross-env NODE_ENV=production miniflare ./build/index.js",
+    "build": "run-s \"build:*\"",
+    "build:css": "npm run generate:css -- --minify",
+    "build:remix": "remix build",
+    "dev:css": "npm run generate:css -- --watch",
+    "generate:css": "npx tailwindcss -o ./app/tailwind.css"
   },
   "dependencies": {
-    "@vueuse/core": "^7.6.1",
-    "@vueuse/head": "^0.7.5",
-    "aos": "^2.3.4",
-    "axios": "^0.26.0",
-    "moment": "^2.29.1",
-    "nprogress": "^0.2.0",
-    "pinia": "^2.0.11",
-    "plausible-tracker": "^0.3.5",
-    "prism-theme-vars": "^0.2.2",
-    "sass": "^1.49.7",
-    "vue": "^3.2.30",
-    "vue-demi": "^0.12.1",
-    "vue-i18n": "^9.1.9",
-    "vue-router": "^4.0.12"
+    "@remix-run/cloudflare": "^1.7.5",
+    "@remix-run/cloudflare-workers": "^1.7.5",
+    "@remix-run/react": "^1.7.5",
+    "cross-env": "^7.0.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.16.1",
-    "@iconify-json/carbon": "^1.0.15",
-    "@iconify-json/cib": "^1.1.1",
-    "@iconify-json/eva": "^1.1.1",
-    "@iconify-json/fa-brands": "^1.1.0",
-    "@iconify-json/la": "^1.1.1",
-    "@iconify-json/line-md": "^1.1.1",
-    "@iconify-json/noto": "^1.1.0",
-    "@iconify-json/ph": "^1.1.1",
-    "@iconify-json/uil": "^1.1.0",
-    "@intlify/vite-plugin-vue-i18n": "^3.2.2",
-    "@types/markdown-it-link-attributes": "^3.0.1",
-    "@types/nprogress": "^0.2.0",
-    "@vitejs/plugin-vue": "^2.2.0",
-    "@vue/test-utils": "^2.0.0-rc.18",
-    "critters": "^0.0.16",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.8.0",
-    "https-localhost": "^4.7.0",
-    "markdown-it-link-attributes": "^4.0.0",
-    "markdown-it-prism": "^2.2.2",
-    "pnpm": "^6.30.1",
-    "typescript": "^4.5.5",
-    "unplugin-auto-import": "^0.5.11",
-    "unplugin-icons": "^0.13.1",
-    "unplugin-vue-components": "^0.17.18",
-    "vite": "^2.8.0",
-    "vite-plugin-inspect": "^0.3.14",
-    "vite-plugin-md": "^0.11.8",
-    "vite-plugin-pages": "^0.20.2",
-    "vite-plugin-pwa": "^0.11.13",
-    "vite-plugin-vue-layouts": "^0.6.0",
-    "vite-plugin-windicss": "^1.7.0",
-    "vitest": "^0.3.2",
-    "vue-tsc": "^0.31.2"
+    "@cloudflare/workers-types": "^3.14.1",
+    "@remix-run/dev": "^1.7.5",
+    "@remix-run/eslint-config": "^1.7.5",
+    "@types/react": "^17.0.47",
+    "@types/react-dom": "^17.0.17",
+    "eslint": "^8.23.1",
+    "miniflare": "^2.6.0",
+    "npm-run-all": "^4.1.5",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.7.4",
+    "wrangler": "^2.0.22"
+  },
+  "engines": {
+    "node": ">=16.13"
   }
 }
